feat: allow to search for venue by artists name